--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   just_audio: ^0.9.46
   flutter_launcher_icons: ^0.14.3
   flutter_hex_color: ^2.0.0
-
+  cached_network_image: ^3.4.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
